--- a/CSS_Course/Project 2/assets/css/style.css
+++ b/CSS_Course/Project 2/assets/css/style.css
@@ -1,14 +1,14 @@
 /*
- * ****************************************************** * 
- * Created Date: Sunday, 10th November 2019 5:57:10 pm    * 
- * Author: Marcello Alfaro                                * 
- * Email: marcello.alfaro1@gmail.com                      * 
- *               --------------------------               * 
- * Last Modified: Friday, 15th November 2019 11:34:36 pm  * 
- * Modified By: Marcello Alfaro                           * 
- *               --------------------------               * 
- * Copyright (c) 2019 - Marshall Inc.                     * 
- * ****************************************************** * 
+ * ******************************************************** * 
+ * Created Date: Sunday, 10th November 2019 5:57:10 pm      * 
+ * Author: Marcello Alfaro                                  * 
+ * Email: marcello.alfaro1@gmail.com                        * 
+ *                --------------------------                * 
+ * Last Modified: Saturday, 23rd November 2019 7:29:48 pm   * 
+ * Modified By: Marcello Alfaro                             * 
+ *                --------------------------                * 
+ * Copyright (c) 2019 - Marshall Inc.                       * 
+ * ******************************************************** * 
  */
 
 /* Begin Landing Section */
@@ -181,4 +181,294 @@
   top: 45%;
 }
 
+#action-section .actionable a h3 {
+  position: relative;
+  top: 35%;
+}
+
+#action-section #group {
+  width: 25rem;
+  position: relative;
+}
+
+#action-section #group > div {
+  position: absolute;
+  width: 100%;
+  height: 48%;
+}
+
+#action-section #group div:first-of-type {
+  top: 0;
+  background-image: url(../images/shop-now.jpg);
+  background-size: cover;
+}
+
+#action-section #group div:last-of-type {
+  bottom: 0;
+  background-image: url(../images/create-an-account.jpg);
+  background-size: cover;
+}
+
+#action-section #group div:first-of-type a {
+  background-color: rgba(255, 44, 121, 0.6);
+}
+
+#action-section #group div:first-of-type a:hover {
+  background-color: rgba(247, 11, 121, 0.9);
+  transition: 0.5s;
+}
+
+#action-section #group div:last-of-type a {
+  background-color: rgba(101, 37, 169, 0.6);
+}
+
+#action-section #group div:last-of-type a:hover {
+  background-color: rgba(72, 22, 99, 0.9);
+  transition: 0.5s;
+}
 /* Ends Action Section */
+
+/* Begin Info Section */
+
+#info {
+  background-color: #f1f1f1;
+}
+
+#info > div {
+  padding: 2.6rem 0;
+  width: max-content;
+}
+
+#info > div > div {
+  display: inline-block;
+  width: 21vw;
+  padding-left: 1rem;
+  border-left: 1px solid;
+}
+
+#info > div > div:nth-of-type(2) {
+  margin: 0 2rem;
+}
+
+#info > div > div h4 {
+  position: relative;
+  bottom: 6px;
+}
+
+#info > div > div p {
+  width: 84%;
+  line-height: 110%;
+}
+
+/* Ends Info Section */
+
+/* Begin Featured Section */
+
+#featured {
+  margin: 6rem;
+}
+
+#featured h3 {
+  text-transform: uppercase;
+}
+
+#featured p {
+  width: 60%;
+}
+
+#featured #items {
+  width: max-content;
+  text-align: left;
+  margin: 2.8rem;
+}
+
+#featured #items .item {
+  display: inline-block;
+  margin: 0 1rem;
+}
+
+#featured #items .item a {
+  height: 18rem;
+  width: 14rem;
+  background-size: cover;
+  background-position: center bottom;
+  position: relative;
+  border-bottom: 4px solid #262626;
+}
+
+#featured #items .item a .price {
+  background-color: #262626;
+  position: absolute;
+  bottom: 0;
+  padding: 0.6em 1.8em;
+}
+
+#featured #items .item small {
+  display: block;
+}
+
+#featured #items .item h6 {
+  text-transform: uppercase;
+}
+
+#featured #items .item:nth-of-type(1) a {
+  background-image: url(../images/featured_1.jpg);
+}
+
+#featured #items .item:nth-of-type(2) a {
+  background-image: url(../images/featured_2.jpg);
+}
+
+#featured #items .item:nth-of-type(3) a {
+  background-image: url(../images/featured_3.jpg);
+}
+
+#featured #items .item:nth-of-type(4) a {
+  background-image: url(../images/featured_4.jpg);
+}
+/* Ends Featured Section */
+
+/* Begin Register Section */
+
+#register {
+  background-color: #fbfbfb;
+  padding: 5rem 0;
+}
+
+#register h6 {
+  text-transform: uppercase;
+}
+
+#register h6 span,
+#register h6 span a {
+  font-size: inherit;
+}
+
+#register a:hover {
+  opacity: 0.8;
+}
+
+#register h3 {
+  letter-spacing: -2px;
+}
+
+#register form {
+  width: max-content;
+}
+
+#register .input-block {
+  font-weight: inherit;
+  color: inherit;
+}
+
+#register form .input-block input {
+  font-weight: inherit;
+  color: inherit;
+  padding: 0.2em 0.6em;
+  margin: 1.2rem 1rem;
+  width: 16vw;
+  background-color: transparent;
+  border-bottom: 1px solid;
+}
+
+#register form .input-block input::placeholder {
+  opacity: 0.86;
+  font-weight: 200;
+}
+
+#register form #terms {
+  letter-spacing: -1px;
+  width: max-content;
+  margin: 2rem 0 1.6rem;
+}
+
+#register form input[type='submit'] {
+  background-color: #202020;
+  display: block;
+  width: max-content;
+  color: white;
+  padding: 0.34em 4.8em;
+}
+
+#register form input[type='submit']:hover {
+  opacity: 0.7;
+}
+
+#newsletter {
+  background-image: url(../images/newsletter.jpg);
+  background-attachment: fixed;
+  background-position: center bottom;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+#newsletter div {
+  background-color: rgba(18, 172, 170, 0.8);
+  padding: 10rem 0;
+}
+
+#newsletter p {
+  width: 40%;
+}
+
+#newsletter form {
+  width: max-content;
+  margin-top: 2rem;
+}
+
+#newsletter form input {
+  padding: 0.6em 1em;
+  width: 18em;
+}
+
+#newsletter form input[type='submit'] {
+  /* Puts the width to watever it would have been initially */
+  /* Puts it to its default size */
+  width: initial;
+  background-color: #1e807d;
+  float: right;
+}
+
+#newsletter form input[type='submit']:hover {
+  background-color: #129c9b;
+  transition: 0.5s;
+}
+/* Ends Register Section */
+
+/* Begin Footer Section */
+
+#footer {
+  padding: 3rem 0;
+  background-color: #323232;
+}
+
+#footer #social-media {
+  width: max-content;
+  margin-bottom: 1rem;
+}
+
+#footer #social-media img {
+  width: 2.2vw;
+}
+
+#footer #social-media img:hover {
+  opacity: 0.4;
+  transition: 0.5s;
+}
+
+#footer #links {
+  width: 36%;
+  margin-bottom: 2rem;
+  padding-bottom: 0.8rem;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.6);
+}
+
+#footer #links a {
+  padding: 0 1.2em;
+}
+
+#footer #links a:hover {
+  opacity: 0.4;
+}
+
+/* Ends Footer Section */
