--- a/Journey/assets/css/main.css
+++ b/Journey/assets/css/main.css
@@ -4,7 +4,7 @@
  * Author: Marcello Alfaro                                  * 
  * Email: marcello.alfaro1@gmail.com                        * 
  *                --------------------------                * 
- * Last Modified: Wednesday, 27th November 2019 12:55:13 pm * 
+ * Last Modified: Wednesday, 27th November 2019 11:43:36 pm * 
  * Modified By: Marcello Alfaro                             * 
  *                --------------------------                * 
  * Copyright (c) 2019 - Marshall Inc.                       * 
@@ -66,6 +66,12 @@ h5.modal-title {
   font-size: inherit;
 }
 
+#login input[type='text'],
+#login input[type='password'] {
+  width: 60%;
+  margin: 0 auto;
+}
+
 #signin h6 span,
 #signin h6 span a {
   font-size: inherit;
@@ -79,8 +85,16 @@ h5.modal-title {
   color: #3498db;
 }
 
+#login span a:hover {
+  text-decoration: underline !important;
+}
+
 #signin span a {
   color: #3498db;
+}
+
+#signin span a:hover {
+  text-decoration: underline !important;
 }
 
 .modal-content {
@@ -103,11 +117,11 @@ button.btn-ingresar:hover {
 }
 
 label.labelSesion {
-  color: #3498db;
+  color: #47525e;
 }
 
 label.labelRegistro {
-  color: #3498db;
+  color: #47525e;
   font-size: 0.8em;
 }
 
@@ -193,7 +207,7 @@ span.required {
 
 #slider-circles {
   position: absolute;
-  bottom: 100px;
+  bottom: 75px;
   left: 50%;
   transform: translateX(-50%);
 }
@@ -438,10 +452,12 @@ div.container .bg-light {
   border-radius: 15px;
   position: absolute;
   top: 85%;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 div.container ul li a {
-  margin-right: 6rem;
+  margin: auto 1.1em;
 }
 
 div.container ul li a {
@@ -462,13 +478,17 @@ div.container ul li a:hover {
 section#post-section {
   background-color: #ecf0f1;
   border-radius: 15px;
-  margin-top: 10%;
-  margin-bottom: 5%;
+  margin-top: 3.7em;
+  margin-bottom: 2.3em;
+  width: 70%;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 div.avatar {
   border: 1px solid;
-  background-image: url(../images/viajeschavetas.jpg);
+  /* background-image: url(../images/viajeschavetas.jpg); */
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -478,15 +498,42 @@ div.avatar {
   margin: 1.7rem 1.2em;
 }
 
+section#post-section .col-7 {
+  padding-left: 0;
+}
+
 div#user {
+  padding-top: 2.3em;
+}
+
+div#user span a,
+div#user span {
+  padding-right: 0.2em;
+}
+
+div#user span img {
+  width: 24px;
+  padding-right: 0.2em;
+}
+
+/* div#user {
   position: absolute;
   top: 38%;
   right: 20%;
-}
+} */
 
 div#user span.username a {
   font-weight: 700;
   margin: 0 0.2em;
+}
+
+div#user .date {
+  display: block;
+  margin-top: 2px;
+  margin-left: 6px;
+  font-size: 0.7em;
+  color: inherit;
+  font-weight: 700;
 }
 
 div#user span.username a:hover {
@@ -496,6 +543,8 @@ div#user span.username a:hover {
 }
 
 button.btn-seguir {
+  margin: 2.4em auto;
+  margin-left: 1.7em;
   padding: 0.6em 1.2em;
   color: #3498db;
   border: 2px solid;
@@ -504,10 +553,11 @@ button.btn-seguir {
   font-weight: 700;
   font-size: 0.8em;
   transition: 0.3s;
+  outline: none;
   transition-property: background-color, color;
-  position: absolute;
+  /*  position: absolute;
   right: 15%;
-  bottom: 33%;
+  bottom: 33%; */
 }
 
 button.btn-seguir:hover {
@@ -549,7 +599,7 @@ hr.description-separator {
 }
 
 div.social-links {
-  padding-bottom: 1.2em;
+  padding-bottom: 1em;
 }
 
 div.social-links i:not(.fa-thumbs-up) {
@@ -561,14 +611,98 @@ div.social-links i:first-child {
   color: #3498db;
 }
 
-div.social-links span a {
+div.social-links span button {
+  outline: none;
+  background: none;
   float: right;
   font-weight: 700;
+  font-size: 0.9em;
+  color: inherit;
 }
 
-div.social-links span a:hover {
+div.social-links span button:hover {
   color: #47525e;
   text-decoration: underline !important;
+}
+
+div.social-links span.likes {
+  color: #3498db;
+}
+
+.showComments {
+  display: block;
+}
+
+div#comments-section {
+  display: none;
+}
+
+div#comments-section .new-comment button.btn-comment {
+  background-color: #3498db;
+  color: #fff;
+  padding: 0.7em 1.4em;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin: 1.1em 4.5em;
+  border: 2px solid #3498db;
+  transition-property: background-color, color;
+  transition: 0.3s;
+}
+
+div#comments-section .new-comment button.btn-comment:hover {
+  background-color: white;
+  color: #3498db;
+}
+
+div#comments-section .new-comment input[type='text'] {
+  width: 80%;
+  margin: 0.7em auto;
+  padding: 0.3em 1em;
+  border: 2px solid transparent;
+  transition-property: border;
+  transition: 0.3s;
+}
+
+div#comments-section .new-comment input[type='text']:focus {
+  border: 2px solid #3498db;
+}
+
+div#comments-section div.posted-comments hr.comment-separator {
+  width: 50%;
+  color: rgba(71, 82, 94, 0.3);
+  border: 1px solid;
+}
+
+div.posted-comments h5 {
+  margin-left: 3.8em;
+}
+
+div.posted-comments p {
+  margin-left: 3.8em;
+  margin-right: 3.8em;
+}
+
+div.posted-comments h5 a {
+  color: #47525e;
+  font-weight: 700;
+  transition-property: text-decoration, color;
+  transition: 0.3s;
+}
+
+div.posted-comments h5 a:hover {
+  text-decoration: underline !important;
+  color: #3498db;
+}
+
+@media (max-width: 1444px) {
+  div#user {
+    right: -1%;
+    transform: translateX(1%);
+  }
+
+  div.container ul li a {
+    margin-right: 1.4em;
+  }
 }
 
 /* Posts Section */
@@ -580,7 +714,7 @@ div.social-links span a:hover {
 }
 
 #footer > div {
-  padding: 72px 221px;
+  padding: 2em 3.4em;
 }
 
 #footer table tr:first-of-type td {
@@ -598,7 +732,7 @@ div.social-links span a:hover {
 
 #footer table {
   display: inline-block;
-  width: 68%;
+  width: 50%;
 }
 
 #footer #social {
@@ -636,7 +770,7 @@ div.social-links span a:hover {
 
 #footer > div > img {
   padding-top: 2.2em;
-  width: 30%;
+  width: 40%;
   float: right;
 }
 
@@ -647,4 +781,11 @@ div.social-links span a:hover {
   text-align: center;
   margin-bottom: 0;
 }
+
+@media (max-width: 1444px) {
+  #footer > div > img {
+    width: 385px;
+  }
+}
+
 /* Footer Section */
